--- a/streamingApp/style.css
+++ b/streamingApp/style.css
@@ -203,7 +203,7 @@ p span{
     word-spacing: 10px;
     display: inline;
 	background-color:rgb(0, 0, 0);
-	box-shadow: -10px 0 5px 0 rgb(0, 0, 0), 10px 0 5px 0 rgb(0, 0, 0); /* left/right padding  (IE8 needs fallback) */
+	box-shadow: -10px 0 5px 5px rgb(0, 0, 0), 10px 0 5px 5px rgb(0, 0, 0); /* left/right padding  (IE8 needs fallback) */
 	left:0px; /* match px of box-shadow above to align text */
 	position: relative;
 
